--- a/style.css
+++ b/style.css
@@ -5,44 +5,116 @@ body{
                          'header header header header'
                          'section section section section'
                          'footer footer footer footer';
-   grid-template-rows: 20vh 30vh 60vh 40vh;                      
+    grid-template-rows: 20vh 30vh 60vh 40vh;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 
 nav{
     grid-area: nav;
-    background-color: magenta;
+    background-color: orangered;
+}
 
+nav #mobile{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav #desktop{
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: space-around;
+}
+
+nav #desktop a{
+    text-decoration: none;
+    color: black;
+    font-size: 20pt;
+    font-weight: 800;
+    border-bottom: solid;
 }
 
 header{
     grid-area: header;
-    background-color: aquamarine;
-
+    background-image: url(estrogonofe-de-frango-1920x1080.jpg); 
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+header h1{
+    color: aquamarine;
+    background-color: brown;
 }
 
 section{
     grid-area: section;
-    background-color: blue;
+    background-color: orangered;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 30px;
+}
+
+section p{
+    color: black;
+    font-size: 18pt;
+    font-family: 'Bahianita', cursive;
 }
 
 footer{
     grid-area: footer;
-    background-color: black;
+    background-color: orangered;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+footer aside{
+    display: none;
+}
+
+footer div{
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+footer div a{
+    cursor:pointer;
+}
+
 @media(min-width: 768px){
     body{
         grid-template-areas: 'nav nav nav nav'
-                             'header header section section'
-                             'header header section section'
-                             'footer footer footer footer';
+                            'header header section section'
+                            'header header section section'
+                            'footer footer footer footer';
+    }
+    nav #desktop{
+        display: flex;
+    }
+
+    nav #mobile{
+        display: none;
     }
 }
 
 @media(min-width: 1024px){
     body{
         grid-template-areas: 'nav nav nav nav'
-                             'section section section section'
-                             'header header footer footer'
-                             'header header footer footer';
+                            'section section section section'
+                            'header header footer footer'
+                            'header header footer footer';
+    }
+    
+    footer aside{
+        display: block;
     }
 }
